package com.github.sundaycrafts.cleancoders.casestudy;

public class License {
}
