package com.github.sundaycrafts.cleancoders.casestudy;

public class User {
    private String username;

    public User(String username) {
        this.username = username;
    }
}
