@startuml
allow_mixing
database Database

package Core {
  object PresentCodecastUsecase
  class Codecast
  class User
  class License
  interface Gateway
  class MockGateway
  object LoginUsecase
  interface Gatekeeper {
    ---
    + setLoginUser
  }
}

PresentCodecastUsecase --> Codecast
PresentCodecastUsecase --> User
PresentCodecastUsecase --> License
PresentCodecastUsecase --> Gateway
Gateway <|-- MockGateway
MockGateway --> Database
LoginUsecase --> Gatekeeper

package GUI {
}

object Session
cloud Somewhere
Somewhere --> Session
Session ..* Gatekeeper : validated
@enduml